test/files/neg/t9527b.check
t9527b.scala:6: error: msg A=Nothing
    implicitly[Int => String]
              ^
one error found
